# clang-tidy-check-extra-i18n-string

./: CMakeLists.txt  I18nStringCheck.cpp  I18nStringCheck.h
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
test/: i18n-string.cpp
